# EAG_V1

./: .env  .gitignore  README.md  blocked.html  manifest.json  popup.html  popup.js
assignment1/: background.js  blocked.js  manifest.json  popup.js  site-collections.js
assignment2/: README.md  background.js  manifest.json  popup.html  popup.js
assignment3/: README.md  app.py  background.js  content.js  cursor_prompt.txt  manifest.json  popup.html  popup.js  pyproject.toml  requirements.txt  utilities.py
assignment3/practise/: main.ipynb  main.py
assignment3_stock_graph/: .gitignore  README.md  Session3.ipynb  cursor_prompt.txt  gmail_client.py  gmail_utilities.py  logs.txt  main.py  popup.html  popup.js  pyproject.toml  requirements.txt  server.py
assignment3_stock_graph/chrome_extension/: gemini.js  manifest.json  popup.html  popup.js
assignment4/: .gitignore  AgenticMCPUse.py  README.md  example_mcp_server_mac.py  gui_coordinates.py  main.py  mcp_client.py  mcp_server.py  pyproject.toml  utilities.py
