[project]
name = "assignment3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "google>=3.0.0",
    "google-genai>=1.11.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "werkzeug>=3.1.3",
]
