[project]
name = "assignment3-stock-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-vantage>=2.3.1",
    "fastapi>=0.109.0",
    "finnhub-python>=2.4.18",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.3.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.8.0",
    "newsapi-python>=0.2.7",
    "pandas>=2.2.0",
    "pip>=25.1",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "uvicorn>=0.27.0",
    "yfinance>=0.2.36",
]
